--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ jobs:
         - ls -la
         - nvm install stable
         - npm install --global create-dmg
-        - create-dmg "KatalonStudio.app" dmgfiles/
+        - create-dmg KatalonStudio.app
