--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,11 @@ addons:
     debug: true
 jobs:  
   include:
+    - stage: "Importcertificate"
+      name" ImportCertificate"
+      script:
+        - security import KatalonCodeSignDeveloperCert.p12 -k ~/Library/Keychains/login.keychain-db -P katalon@123
+        - security find-identity -v
     - stage: "CreateDMG"
       name: "Creating"
       script:
