--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,5 @@ jobs:
     - stage: "CreateDMG"
       name: "Creating"
       script:
-        - ls -la
-        - nvm install stable
-        - npm install --global create-dmg
+        - npm install create-dmg
         - create-dmg KatalonStudio.app
