--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,10 @@ addons:
     debug: true
 jobs:  
   include:
-    - stage: "Importcertificate"
-      name: "Importcertificate"
+    - stage: "CreateDMGApp"
+      name: "CreateDMGAPP"
       script:
         - security import KatalonCodeSignDeveloperCert.p12 -k ~/Library/Keychains/login.keychain-db -P katalon@123
         - security find-identity -v
-    - stage: "CreateDMG"
-      name: "Creating"
-      script:
         - npm install create-dmg
         - create-dmg KatalonStudio.app
