--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,5 @@ jobs:
         - export PATH=~/.npm-global/bin:$PATH
         - npm install -g create-dmg
         - mkdir -p Build/Releases
+        - sudo codesign --verbose --force --deep --sign "80166EC5AD274586C44BD6EE7A59F016E1AB00E4" --timestamp=none "Katalon Studio.app"
         - create-dmg KatalonStudio.app Build/Releases
