--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 os: osx
 addons:
   artifacts:
-    target_paths: Build/Release/*
+    target_paths: Build/*
     debug: true
 jobs:  
   include:
@@ -16,5 +16,5 @@ jobs:
         - export PATH=~/.npm-global/bin:$PATH
         - npm install -g create-dmg
         - mkdir -p Build/Releases
-        - sudo codesign --verbose --force --deep --sign "80166EC5AD274586C44BD6EE7A59F016E1AB00E4" --timestamp=none "KatalonStudio.app"
-        - create-dmg KatalonStudio.app Build/Releases
+        - sudo codesign --verbose --force --deep --sSign "80166EC5AD274586C44BD6EE7A59F016E1AB00E4" --timestamp=none "KatalonStudio.app"
+        - create-dmg KatalonStudio.app Build/
